# CircuitGen_Generator

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  .gitlab-ci.yml  .gitmodules  ALUGenerator_8cpp.html  ALUGenerator_8cpp.js  ALUGenerator_8cpp__incl.map  ALUGenerator_8cpp__incl.md5  ALUGenerator_8hpp.html  ALUGenerator_8hpp__dep__incl.map  ALUGenerator_8hpp__dep__incl.md5  ALUGenerator_8hpp__incl.map  ALUGenerator_8hpp__incl.md5  ALUGenerator_8hpp_source.html  ArithmeticGenerator_8cpp.html  ArithmeticGenerator_8cpp__incl.map  ArithmeticGenerator_8cpp__incl.md5  ArithmeticGenerator_8hpp.html  ArithmeticGenerator_8hpp__dep__incl.map  ArithmeticGenerator_8hpp__dep__incl.md5  ArithmeticGenerator_8hpp__incl.map  ArithmeticGenerator_8hpp__incl.md5  ArithmeticGenerator_8hpp_source.html  AuxiliaryMethodsTests_8cpp.html  AuxiliaryMethodsTests_8cpp.js  AuxiliaryMethodsTests_8cpp__incl.map  AuxiliaryMethodsTests_8cpp__incl.md5  AuxiliaryMethodsTests_8cpp_a40dc95ff63e003fca25adaabd583fb2e_cgraph.md5  AuxiliaryMethodsTests_8cpp_a5243216c95f48222249f4f02b3150545_cgraph.md5  AuxiliaryMethodsTests_8cpp_a9166e4412924fde89ef54c6d6c772b2b_cgraph.map  AuxiliaryMethodsTests_8cpp_a92c67cf07cbab3343c30486bdef59475_cgraph.map  AuxiliaryMethodsTests_8cpp_aea730033f066206884f730b0ad5f0f7a_cgraph.map  AuxiliaryMethodsTests_8cpp_aef938ab6d859bf310160371b18dc43e2_cgraph.md5  AuxiliaryMethods_8cpp.html  AuxiliaryMethods_8cpp__incl.map  AuxiliaryMethods_8cpp__incl.md5  AuxiliaryMethods_8hpp.html  AuxiliaryMethods_8hpp.js  (+4883 more)
Generator/source/: .main.cpp.swp  AuxiliaryMethods.cpp  AuxiliaryMethods.h  CMakeCache.txt  CMakeLists.txt  FilesTools.cpp  FilesTools.h  Makefile  Settings.cpp  Settings.h  TODO.txt  cmake_install.cmake  conanfile.txt  config.h.in  cpp_files.txt  errors.txt  find_pragma.txt  generatorAPI.cpp  generatorAPI.h  grep_pragma.txt  main.cpp  params.json  test.sh
Generator/source/AuxiliaryMethods/: AuxiliaryMethods.cpp  AuxiliaryMethods.h  CMakeLists.txt  RandomGeneratorWithSeed.h
Generator/source/DataBase/: .DataBaseGenerator.cpp.swp  CMakeLists.txt  DataBaseGenerator.cpp  DataBaseGenerator.h  DataBaseGeneratorParameters.cpp  DataBaseGeneratorParameters.h
Generator/source/abc_utils/: AbcUtils.cpp  AbcUtils.h  CMakeLists.txt  StandartUtil.h  YosysUtils.cpp  YosysUtils.h
Generator/source/circuits/: CMakeLists.txt  Circuit.cpp  Circuit.h  CircuitsParameters.h
Generator/source/filesTools/: CMakeLists.txt  FilesTools.cpp  FilesTools.h
Generator/source/generators/: .TruthTable.cpp.swp  .TruthTable.h.swp  CMakeLists.txt  GenerationParameters.cpp  GenerationParameters.h  Parser.cpp  Parser.h  SimpleGenerators.cpp  SimpleGenerators.h  TruthTable.cpp  TruthTable.h
Generator/source/graph/: CMakeLists.txt  GraphVertex.cpp  GraphVertex.h  GraphVertexTests.cpp  OrientedGraph.cpp  OrientedGraph.h
Generator/source/optimization_utils/: AbcCommands.h  AbcUtils.cpp  AbcUtils.h  CMakeLists.txt  StandartUtil.h  UtilsCommands.h  YosysUtils.cpp  YosysUtils.h
Generator/source/reliability/: CMakeLists.txt  Reliability.cpp  Reliability.h
Generator/source/settings/: CMakeLists.txt  Settings.cpp  Settings.h
Generator/source/tests/: .CMakeLists.txt.swp  .GraphVertexTests.cpp.swp  .SettingsTests.cpp.swp  AbcUtilsTests.cpp  AuxiliaryMethodsTests.cpp  CMakeLists.txt  CircuitTests.cpp  ComparisonTests.cpp  DataBaseGeneratorTests.cpp  DecoderTests.cpp  FileToolsTest.cpp  FilesToolsTests.cpp  GraphVertexTests.cpp  Makefile  OrientedGraphSysTests.cpp  OrientedGraphTests.cpp  ParityTests.cpp  SettingsTests.cpp  SimpleGeneratorsTests.cpp  TruthTableTests.cpp  YosysUtilsTests.cpp  cmake_install.cmake
Generator/source/thread_pool/: CMakeLists.txt  ThreadPool.h  UnboundedMPMCQueue.h
lib/: CMakeLists.txt
lib/easyloggingpp/: easylogging++.cc
src/: CMakeLists.txt  CircuitGenGenerator.cpp  main.cpp
src/additional/: AuxiliaryMethods.cpp  AuxiliaryMethods.h  AuxiliaryMethods.hpp  CMakeLists.txt  RandomGeneratorWithSeed.cpp  RandomGeneratorWithSeed.h  RandomGeneratorWithSeed.hpp
src/additional/filesTools/: CMakeLists.txt  (+3 more)
src/api/: CMakeLists.txt  generatorAPI.cpp  generatorAPI.h
src/baseStructures/: CMakeLists.txt  Parser.cpp  Parser.h  Parser.hpp
src/circuit/: CMakeLists.txt  Circuit.cpp  Circuit.h  Circuit.hpp  CircuitParameters.h  CircuitParameters.hpp
src/circuits/: CMakeLists.txt  Circuit.cpp  Circuit.h  CircuitsParameters.h
src/components/: Dropdown.js
src/database/: ALUDataBaseGenerator.cpp  ALUDataBaseGenerator.hpp  CMakeLists.txt  ComparisonDataBaseGenerator.cpp  ComparisonDataBaseGenerator.hpp  DataBaseGenerator.cpp  DataBaseGenerator.h  DataBaseGenerator.hpp  DataBaseGeneratorParameters.cpp  DataBaseGeneratorParameters.h  DataBaseGeneratorParameters.hpp  DecoderDataBaseGenerator.cpp  DecoderDataBaseGenerator.hpp  DemultiplexerDataBaseGenerator.cpp  DemultiplexerDataBaseGenerator.hpp  EncoderDataBaseGenerator.cpp  EncoderDataBaseGenerator.hpp  FromRandomTruthTableDataBaseGenerator.cpp  FromRandomTruthTableDataBaseGenerator.hpp  GeneticDataBaseGenerator.cpp  GeneticDataBaseGenerator.hpp  MultiplexerDataBaseGenerator.cpp  MultiplexerDataBaseGenerator.hpp  MultiplierDataBaseGenerator.cpp  MultiplierDataBaseGenerator.hpp  NumOperationsDataBaseGenerator.cpp  NumOperationsDataBaseGenerator.hpp  ParityDataBaseGenerator.cpp  ParityDataBaseGenerator.hpp  RandLevelDataBaseGenerator.cpp  RandLevelDataBaseGenerator.hpp  RandLevelExperimentalDataBaseGenerator.cpp  RandLevelExperimentalDataBaseGenerator.hpp  SubtractorDataBaseGenerator.cpp  SubtractorDataBaseGenerator.hpp  SummatorDataBaseGenerator.cpp  SummatorDataBaseGenerator.hpp
src/generators/: CMakeLists.txt  GenerationParameters.cpp  GenerationParameters.h  GenerationParameters.hpp
src/parameters/: CMakeLists.txt
src/scss/: AddParametr.scss
src/settings/: CMakeLists.txt  Settings.cpp  Settings.h  Settings.hpp
test/: CMakeLists.txt  FilesToolsTests.cpp  OrientedGraphTests.cpp  SettingsTests.cpp  TruthTableTests.cpp  easylogging++Init.hpp  tests
test/logger_test/: loggerTests.sh
test/src/: AbcUtilsTests.cpp  YosysUtilsTests.cpp
(+97789 files in other folders)
